compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array_invalid_type.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 8
expression: "fn x() { \"test\" }\n\nfn main() {\n    let a = <<1:size(x())>>\n    a\n}"
---
----- SOURCE CODE
fn x() { "test" }

fn main() {
    let a = <<1:size(x())>>
    a
}

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:4:22
  │
4 │     let a = <<1:size(x())>>
  │                      ^^^

Expected type:

    Int

Found type:

    String
